testdata/baselines/reference/submodule/compiler/jsFileMethodOverloads.errors.txt
jsFileMethodOverloads.js(6,14): error TS2304: Cannot find name 'T'.
jsFileMethodOverloads.js(9,10): error TS2339: Property 'value' does not exist on type 'Example'.
jsFileMethodOverloads.js(26,24): error TS2339: Property 'value' does not exist on type 'Example'.
jsFileMethodOverloads.js(40,18): error TS2304: Cannot find name 'T'.
jsFileMethodOverloads.js(44,25): error TS2339: Property 'value' does not exist on type 'Example'.
jsFileMethodOverloads.js(44,39): error TS2339: Property 'value' does not exist on type 'Example'.


==== jsFileMethodOverloads.js (6 errors) ====
    /**
     * @template T
     */
     class Example {
      /**
       * @param {T} value 
                 ~
!!! error TS2304: Cannot find name 'T'.
       */
      constructor(value) {
        this.value = value;
             ~~~~~
!!! error TS2339: Property 'value' does not exist on type 'Example'.
      }
    
      /**
       * @overload
       * @param {Example<number>} this
       * @returns {'number'}
       */
      /**
       * @overload
       * @param {Example<string>} this
       * @returns {'string'}
       */
      /**
       * @returns {string}
       */
      getTypeName() {
        return typeof this.value;
                           ~~~~~
!!! error TS2339: Property 'value' does not exist on type 'Example'.
      }
    
      /**
       * @template U
       * @overload
       * @param {(y: T) => U} fn
       * @returns {U}
       */
      /**
       * @overload
       * @returns {T}
       */
      /**
       * @param {(y: T) => unknown} [fn]
                     ~
!!! error TS2304: Cannot find name 'T'.
       * @returns {unknown}
       */
      transform(fn) {
        return fn ? fn(this.value) : this.value;
                            ~~~~~
!!! error TS2339: Property 'value' does not exist on type 'Example'.
                                          ~~~~~
!!! error TS2339: Property 'value' does not exist on type 'Example'.
      }
    }
    